# calibrate-backend

./: CLAUDE.md  ENV.md  README.md  SELF_HOSTING.md  SETUP_SDK.md  docker-compose.yml  pyproject.toml
.cursor/rules/: architecture.md
.github/scripts/: patch-cli-auth-commands.sh  patch-cli-server-url.sh  sync-client-repo.sh
.github/workflows/: auto-publish-sdk.yml  deploy-staging.yml  deploy.yml  publish-sdk.yml  tests.yml
fern/: generators.yml  openapi-overrides.yml
openapi/: overlay.yaml
src/: .env.example  annotation_eval_runner.py  annotation_metrics.py  auth_utils.py  dataset_utils.py  db.py  job_recovery.py  llm_judge.py  main.py  org_scope.py  pagination.py  utils.py
src/routers/: agent_tests.py  agents.py  annotation_agreement.py  annotation_tasks.py  annotators.py  api_keys.py  evaluators.py  jobs.py  org_limits.py  organizations.py  personas.py  public.py  scenarios.py  simulations.py  stt.py  tests.py  tools.py  traces.py  tts.py
tests/: conftest.py  test_agent_test_helpers.py  test_annotation_eval_runner.py  test_annotation_metrics.py  test_cli_auth_patch.py  test_cli_server_url_patch.py  test_dataset_utils.py  test_db.py  test_fake_calibrate_agent.py  test_indexes.py  test_main_and_routers.py  test_pagination.py  test_routers_agent_tests.py  test_routers_agents.py  test_routers_annotation.py  test_routers_annotation_tasks.py  test_routers_api_keys.py  test_routers_evaluators.py  test_routers_public.py  test_routers_simulations.py  test_routers_stt_tts.py  test_routers_tests.py  test_routers_traces.py  test_run_tasks.py  test_traces_store.py
(+13 files in other folders)
